--- a/atividade web 01-04/atividade/index1.html
+++ b/atividade web 01-04/atividade/index1.html
@@ -8,40 +8,36 @@
 </head>
 <body>
     <div class="header">
-        <h1>welcome to the herba's site</h1>
-      </div>
-    <div class=" colunas">
-        <h2>joão's important things</h2>
-        <li>The name</li>
-        <li>The parents</li>
-        <li>The friends</li>
-        <li>The Food</li>
-      </ul>
+        <h1>Welcome to the Herba's site</h1>
     </div>
-      
-            <div class=" colunas">
-             <div class="aside">
-                 <h2>João Pedro De Andrade Santos</h2>
-                 <p>joão was born in são paulo.</p>
-                 <p>João spent all his life in Cotia.</p>
-                 <h2>what is his nickname?</h2>
-                 <p>herba, because when he was kid his mom used to send Herbalife products.</p>
-                 <h2>What are you going to find here?</h2>
-                 <p> his preferences , his habits and preferences</p>
-             </div>
-            </div>
+    <div class="colunas">
+        <ul>
+            <h2>João's Important Things</h2>
+            <li>The name</li>
+            <li>The parents</li>
+            <li>The friends</li>
+            <li>The food</li>
+        </ul>
+    </div>
+    <div class="colunas">
+        <div class="aside">
+            <h2>João Pedro De Andrade Santos</h2>
+            <p>João was born in São Paulo.</p>
+            <p>João spent all his life in Cotia.</p>
+            <h2>What is his nickname?</h2>
+            <p>Herba, because when he was a kid, his mom used to sell Herbalife products.</p>
+            <h2>What are you going to find here?</h2>
+            <p>His preferences, his habits and preferences.</p>
         </div>
-
-      <div class="row">
-
-        <div class=" colunas">
-          <h1>Cotia, Brasil</h1>
-          <p>Cotia is a municipality in the state of São Paulo, located in the Metropolitan Region of São Paulo. The city lies along the banks of the Cotia River, a tributary of the Tietê River. Cotia is an area of expansion within the Metropolitan Region of São Paulo. The economy of Cotia is diverse, with industrial and agricultural sectors standing out. The city boasts many tourist attractions, marked by faith, adventure, ecology, culture, and leisure. Cotia preserves waterfalls, the Atlantic Forest, and wide spaces for religious gatherings.</p>
+    </div>
+    <div class="row">
+        <div class="colunas">
+            <h1>Cotia, Brasil</h1>
+            <p>Cotia is a municipality in the state of São Paulo, located in the Metropolitan Region of São Paulo. The city lies along the banks of the Cotia River, a tributary of the Tietê River. Cotia is an area of expansion within the Metropolitan Region of São Paulo. The economy of Cotia is diverse, with industrial and agricultural sectors standing out. The city boasts many tourist attractions, marked by faith, adventure, ecology, culture, and leisure. Cotia preserves waterfalls, the Atlantic Forest, and wide spaces for religious gatherings.</p>
         </div>
-
-      <div class="footer">
-        <p>Resize the browser window to see how the content respond to the resizing.</p>
-      </div>
-    
+    </div>
+    <div class="footer">
+        <p>Thanks for visiting Herba's site</p>
+    </div>
 </body>
 </html>
